css/prj1dever.css
* {
    padding: 0px;
    margin: 0px;
    text-decoration: none;
}

#head {
    height: 40px;
    display: flex;
    position: fixed;
    justify-content: space-between;
    top: 0px;
    left: 0px;
    right: 0px;
    /*Dùng top left right với fixed cho tràn ra */
    background-color: antiquewhite;
    padding: 20px 10px;
}

.headleft_find {
    display: flex;
    height: 30px;
    width: 300px;
    border: 1px solid rgba(70, 69, 69, 0.734);
    border-radius: 10px 10px;
    background-color: rgb(244, 242, 240);
    margin-left: 20px;
}

.headleft_find_icon {
    margin-left: 20px;
}

.headleft_find p {
    font-size: small;
    padding-left: 20px;
    padding-top: 5px;
}

.headleft_mid {
    display: flex;

}

.headleft_mid nav {
    margin-left: 30px;
    line-height: 30px;

}



/* .headleft_mid nav:hover {
    background-color: rgb(201, 208, 208);
    height: 40px;
    width: max-content;
    
} */

#middle {
    display: flex;
    padding-top: 80px;
    padding: 80px 10px;
}

.middle_left {
    position: fixed;
    width: 200px;
    height: 600px;
    background-color: aqua;
}

.middle_right {
    padding-left: 210px;
    width: 1100px;
    background-color: rgba(240, 231, 231, 0.65);
    display: block;

}

.middle_right_Slide {
    height: 250px;
    background-color: rgb(246, 246, 246);
    display: flex;
    margin: 20px;
    justify-content: space-between;

}

.middle__Slide_left {
    width: 750px;
    height: 250px;
    background-color: rgb(94, 68, 223);
    display: flex;
    border-radius: 20px 20px;
}

.middle__Slide_left ul {
    width: 370px;
    line-height: 40px;
    padding: 30px;
    list-style: none;

}

.middle__Slide_left li a {
    color: white;
    font-weight: bold;
    font-size: large;
    font-family: Arial, Helvetica, sans-serif;

}

.middle__Slide_left li p {
    color: white;
    font-size: small;
}

.middle__Slide_right {
    width: 250px;
    background-color: rgb(185, 114, 114);
    height: 250px;
    border-radius: 20px 20px;
    display: flex;
    position: relative;
}

.middle__Slide_right_content {
    /* width: 370px;
    line-height: 40px;
    padding: 30px;
   list-style: none; */
}

.middle__Slide_right_img  {
    position: absolute;
    right: 0px;
    bottom: 0px;
}


.middle_right_2 {
    height: 300px;
    width: 100%;
    background-color: brown;
}

.middle_right_3 {
    height: 500px;
    width: 100%;
    background-color: rgb(77, 42, 165);
}

.middle_right_4 {
    height: 320px;
    width: 100%;
    background-color: rgb(136, 165, 42);
}

.middle_right_5 {
    height: 500px;
    width: 100%;
    background-color: rgb(42, 165, 65);
}

#footer {}

